[DBG] make js explicit

--- a/proj/neuralMDL/index.html
+++ b/proj/neuralMDL/index.html
@@ -103,6 +103,18 @@
     <div w3-include-html="https://www.baihan.nyc/html/bodyjs.html"></div>
     <script> w3IncludeHTML(); </script>
 
+<script src="https://www.baihan.nyc/js/jquery.min.js"></script>
+<script src="https://www.baihan.nyc/js/bootstrap.bundle.js"></script>
+<script src="https://www.baihan.nyc/js/jquery.easing.js"></script>
+<script src="https://www.baihan.nyc/js/resume.js"></script>
+<script src="https://www.baihan.nyc/js/prettify.js"></script>
+
+<script src="https://www.baihan.nyc/js/d3.js"></script>
+<script src="https://www.baihan.nyc/js/d3-scale-chromatic.js"></script>
+<script src="https://www.baihan.nyc/js/meyda.js"></script>
+<script src="https://www.baihan.nyc/js/three.js"></script>
+<script src="https://www.baihan.nyc/js/tda.js"></script>
+
 </body>
 
     <div w3-include-html="https://www.baihan.nyc/html/footer.html"></div>
