[DBG] change viz width

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -5,13 +5,15 @@
 
 <head>
     <div w3-include-html="https://www.baihan.nyc/html/header.html"></div>
-    <script> w3IncludeHTML(); </script>
+    <script>
+        w3IncludeHTML();
+    </script>
 
-<script src="https://www.baihan.nyc/js/d3.js"></script>
-<script src="https://www.baihan.nyc/js/d3-scale-chromatic.js"></script>
-<script src="https://www.baihan.nyc/js/meyda.js"></script>
-<script src="https://www.baihan.nyc/js/three.js"></script>
-<script src="https://www.baihan.nyc/js/tda.js"></script>
+    <script src="https://www.baihan.nyc/js/d3.js"></script>
+    <script src="https://www.baihan.nyc/js/d3-scale-chromatic.js"></script>
+    <script src="https://www.baihan.nyc/js/meyda.js"></script>
+    <script src="https://www.baihan.nyc/js/three.js"></script>
+    <script src="https://www.baihan.nyc/js/tda.js"></script>
 
 </head>
 
@@ -20,7 +22,7 @@
     <div w3-include-html="https://www.baihan.nyc/html/navright.html"></div>
     <script> w3IncludeHTML(); </script>
      -->
-        <div class="container-fluid p-0">
+    <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
             <div class="my-auto">
                 <h2 class="mb-5" , style="text-transform:none">VoiceID on the fly </h2>
@@ -28,49 +30,53 @@
 
                 <b class="text-primary"> by <a href="https://www.baihan.nyc/">Baihan Lin</a> and <a href="https://www.estherzhang.com/">Xinxin Zhang</a>, 2020 &nbsp; </b>
                 <p class="mb-5 text-primary">
-                    <br> 
                     <br>
-                </p>   
+                    <br>
+                </p>
 
-<div class="row">
-  <div id="showcase" class="col">
-    <div id="audioControl">
-      <p>Allow microphone access or play this audio file to see a demo.</p>
-      <audio id="elvisSong" controls src="ripitup.mp3"></audio>
-    </div>
-    <canvas></canvas>
-    <div id="legend">
-      <div class="key-item">
-        <div class="key-color pink"></div><div class="key-text">Root Mean Squared (RMS)</div>
-      </div>
-      <div class="key-item">
-        <div class="key-color yellow"></div><div class="key-text">Spectral Centroid</div>
-      </div>
-      <div class="key-item">
-        <div class="key-color blue"></div><div class="key-text">Spectral Rolloff</div>
-      </div>
-    </div>
-    <div id="chroma"></div>
-    <div id="mfcc"></div>
-  </div>
-  <hr>
-</div>
-<script src="main.js"></script>
+                <div class="row">
+                    <div id="showcase" class="col">
+                        <div id="audioControl">
+                            <p>Allow microphone access or play this audio file to see a demo.</p>
+                            <audio id="elvisSong" controls src="ripitup.mp3"></audio>
+                        </div>
+                        <canvas></canvas>
+                        <div id="legend">
+                            <div class="key-item">
+                                <div class="key-color pink"></div>
+                                <div class="key-text">Root Mean Squared (RMS)</div>
+                            </div>
+                            <div class="key-item">
+                                <div class="key-color yellow"></div>
+                                <div class="key-text">Spectral Centroid</div>
+                            </div>
+                            <div class="key-item">
+                                <div class="key-color blue"></div>
+                                <div class="key-text">Spectral Rolloff</div>
+                            </div>
+                        </div>
+                        <!-- <div id="chroma"></div> -->
+                        <div id="mfcc"></div>
+                    </div>
+                    <hr>
+                </div>
+                <script src="main.js"></script>
 
             </div>
         </section>
     </div>
 
-
-<script src="https://www.baihan.nyc/js/jquery.min.js"></script>
-<script src="https://www.baihan.nyc/js/bootstrap.bundle.js"></script>
-<script src="https://www.baihan.nyc/js/jquery.easing.js"></script>
-<script src="https://www.baihan.nyc/js/resume.js"></script>
-<script src="https://www.baihan.nyc/js/prettify.js"></script>
+    <script src="https://www.baihan.nyc/js/jquery.min.js"></script>
+    <script src="https://www.baihan.nyc/js/bootstrap.bundle.js"></script>
+    <script src="https://www.baihan.nyc/js/jquery.easing.js"></script>
+    <script src="https://www.baihan.nyc/js/resume.js"></script>
+    <script src="https://www.baihan.nyc/js/prettify.js"></script>
 
 </body>
 
-    <div w3-include-html="https://www.baihan.nyc/html/footer.html"></div>
-    <script> w3IncludeHTML(); </script>
+<div w3-include-html="https://www.baihan.nyc/html/footer.html"></div>
+<script>
+    w3IncludeHTML();
+</script>
 
 </html>
