[FEAT] enable user arms

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -41,6 +41,15 @@
                             <audio id="elvisSong" controls src="ripitup.mp3"></audio>
                         </div>
                         <canvas></canvas>
+                        <!-- <div id="chroma"></div> -->
+                        <span id="mfcc"></span>
+                        <span class="btn-group">
+                            <button class="button button1">new</button>
+                            <button class="button button2">usr1</button>
+                            <button class="button button3">usr2</button>
+                            <button class="button button4">usr3</button>
+                            <button class="button button5">usr4</button>
+                        </span>
                         <div id="legend">
                             <div class="key-item">
                                 <div class="key-color pink"></div>
@@ -55,8 +64,6 @@
                                 <div class="key-text">Spectral Rolloff</div>
                             </div>
                         </div>
-                        <!-- <div id="chroma"></div> -->
-                        <div id="mfcc"></div>
                     </div>
                     <hr>
                 </div>
