--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -42,13 +42,13 @@
                         </div>
                         <canvas></canvas>
                         <!-- <div id="chroma"></div> -->
-                        <span id="mfcc"></span>
+                        <span id="mfcc"></span><br>
                         <span class="btn-group">
-                            <button class="button button1">new</button>
-                            <button class="button button2">usr1</button>
-                            <button class="button button3">usr2</button>
-                            <button class="button button4">usr3</button>
-                            <button class="button button5">usr4</button>
+                            <br><button class="button button1">new</button> <span id="mfcc"></span><br>
+                            <br><button class="button button2">usr1</button> <span id="mfcc"></span><br>
+                            <br><button class="button button3">usr2</button> <span id="mfcc"></span><br>
+                            <br><button class="button button4">usr3</button> <span id="mfcc"></span><br>
+                            <br><button class="button button5">usr4</button> <span id="mfcc"></span><br>
                         </span>
                         <div id="legend">
                             <div class="key-item">
