[DBG] add color scheme

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -44,11 +44,11 @@
                         <!-- <div id="chroma"></div> -->
                         <span id="mfcc"></span><br>
                         <span class="btn-group">
-                            <br><button class="button button1">new</button> <span id="mfcc"></span><br>
-                            <br><button class="button button2">usr1</button> <span id="mfcc"></span><br>
-                            <br><button class="button button3">usr2</button> <span id="mfcc"></span><br>
-                            <br><button class="button button4">usr3</button> <span id="mfcc"></span><br>
-                            <br><button class="button button5">usr4</button> <span id="mfcc"></span><br>
+                            <br><button class="button button1">new</button> <span id="mfcc0"></span><br>
+                            <br><button class="button button2">usr1</button> <span id="mfcc1"></span><br>
+                            <br><button class="button button3">usr2</button> <span id="mfcc2"></span><br>
+                            <br><button class="button button4">usr3</button> <span id="mfcc3"></span><br>
+                            <br><button class="button button5">usr4</button> <span id="mfcc4"></span><br>
                         </span>
                         <div id="legend">
                             <div class="key-item">
