[DBG] change col

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -58,13 +58,13 @@
                     </div>
                     <div class="col">
                         <!-- <div id="chroma"></div> -->
-                        <div id="mfcc"></div><br>
+                        <div id="mfcc"></div>
                         <div class="btn-group">
-                            <br><button class="button button1">new</button> <span id="mfcc0"></span><br>
-                            <br><button class="button button2">usr1</button> <span id="mfcc1"></span><br>
-                            <br><button class="button button3">usr2</button> <span id="mfcc2"></span><br>
-                            <br><button class="button button4">usr3</button> <span id="mfcc3"></span><br>
-                            <br><button class="button button5">usr4</button> <span id="mfcc4"></span><br>
+                            <button class="button button1">new</button> <div id="mfcc0"></div>
+                            <button class="button button2">usr1</button> <div id="mfcc1"></div>
+                            <br><button class="button button3">usr2</button> <div id="mfcc2"></div>
+                            <br><button class="button button4">usr3</button> <div id="mfcc3"></div>
+                            <br><button class="button button5">usr4</button> <div id="mfcc4"></div>
                         </div>
                     </div>
                     <hr>
