[DBG] fix mfcc justify

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -44,27 +44,27 @@
                         <div id="legend">
                             <div class="key-item">
                                 <div class="key-color pink"></div>
-                                <div class="key-text">Root Mean Squared (RMS)</div>
+                                <div class="key-text">Root Mean Squared (RMS)</div><br />
                             </div>
                             <div class="key-item">
                                 <div class="key-color yellow"></div>
-                                <div class="key-text">Spectral Centroid</div>
+                                <div class="key-text">Spectral Centroid</div><br />
                             </div>
                             <div class="key-item">
                                 <div class="key-color blue"></div>
-                                <div class="key-text">Spectral Rolloff</div>
+                                <div class="key-text">Spectral Rolloff</div><br />
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <!-- <div id="chroma"></div> -->
-                        <div id="mfcc"></div>
+                        <div id="mfcc"></div><br />
                         <div class="btn-group">
-                            <button class="button button1">new</button> <div id="mfcc0"></div>
-                            <button class="button button2">usr1</button> <div id="mfcc1"></div>
-                            <br><button class="button button3">usr2</button> <div id="mfcc2"></div>
-                            <br><button class="button button4">usr3</button> <div id="mfcc3"></div>
-                            <br><button class="button button5">usr4</button> <div id="mfcc4"></div>
+                            <button class="button button1">new</button> <div id="mfcc0"></div><br />
+                            <button class="button button2">usr1</button> <div id="mfcc1"></div><br />
+                            <br><button class="button button3">usr2</button> <div id="mfcc2"></div><br />
+                            <br><button class="button button4">usr3</button> <div id="mfcc3"></div><br />
+                            <br><button class="button button5">usr4</button> <div id="mfcc4"></div><br />
                         </div>
                     </div>
                     <hr>
