[DBG] put back mfcc band

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -55,6 +55,7 @@
                                 <div class="key-text">Spectral Rolloff</div><br />
                             </div>
                         </div>
+                        <div id="mfcc"></div><br />
                     </div>
                     <div class="col">
                         <!-- <div id="chroma"></div> -->
