[DBG] fix row and col

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -55,16 +55,26 @@
                                 <div class="key-text">Spectral Rolloff</div><br />
                             </div>
                         </div>
-                        <div id="mfcc"></div><br />
+<!--                        <div id="mfcc"></div><br />-->
                     </div>
                     <div class="col">
-                        <!-- <div id="chroma"></div> -->
-                        <div id="mfcc"></div><br />
-                        <div class="btn-group">
-                            <button class="button button1">new</button> <div id="mfcc0"></div><br />
+                        <div class="row">
+                            <!-- <div id="chroma"></div> -->
+                            <div id="mfcc"></div><br />
+                        </div>
+                        <div class="row">
+                            <button class="button button1">new</button> <div id="mfcc0"></div>
+                        </div>
+                        <div class="row">
                             <button class="button button2">usr1</button> <div id="mfcc1"></div><br />
+                        </div>
+                        <div class="row">
                             <br><button class="button button3">usr2</button> <div id="mfcc2"></div><br />
+                        </div>
+                        <div class="row">
                             <br><button class="button button4">usr3</button> <div id="mfcc3"></div><br />
+                        </div>
+                        <div class="row">
                             <br><button class="button button5">usr4</button> <div id="mfcc4"></div><br />
                         </div>
                     </div>
