--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -44,38 +44,65 @@
                         <div id="legend">
                             <div class="key-item">
                                 <div class="key-color pink"></div>
-                                <div class="key-text">Root Mean Squared (RMS)</div><br />
+                                <div class="key-text">Root Mean Squared (RMS)</div>
                             </div>
                             <div class="key-item">
                                 <div class="key-color yellow"></div>
-                                <div class="key-text">Spectral Centroid</div><br />
+                                <div class="key-text">Spectral Centroid</div>
                             </div>
                             <div class="key-item">
                                 <div class="key-color blue"></div>
-                                <div class="key-text">Spectral Rolloff</div><br />
+                                <div class="key-text">Spectral Rolloff</div>
                             </div>
                         </div>
 <!--                        <div id="mfcc"></div><br />-->
                     </div>
                     <div class="col">
                         <div class="row">
-                            <!-- <div id="chroma"></div> -->
-                            <div id="mfcc"></div><br />
+                            <div class="col">
+                                <!-- <div id="chroma"></div> -->
+                                <div id="mfcc"></div><br />
+                            </div>
                         </div>
                         <div class="row">
-                            <button class="button button1">new</button> <div id="mfcc0"></div>
+                            <div class="col">
+                                <button class="button button1">new</button>
+                            </div>
+                            <div class="col">
+                                <div id="mfcc0"></div>
+                            </div>
                         </div>
                         <div class="row">
-                            <button class="button button2">usr1</button> <div id="mfcc1"></div><br />
+                            <div class="col">
+                                <button class="button button2">usr1</button>
+                            </div>
+                            <div class="col">
+                                <div id="mfcc1"></div>
+                            </div>
                         </div>
                         <div class="row">
-                            <br><button class="button button3">usr2</button> <div id="mfcc2"></div><br />
+                            <div class="col">
+                                <button class="button button3">usr2</button>
+                            </div>
+                            <div class="col">
+                                <div id="mfcc2"></div>
+                            </div>
                         </div>
                         <div class="row">
-                            <br><button class="button button4">usr3</button> <div id="mfcc3"></div><br />
+                            <div class="col">
+                                <button class="button button4">usr3</button>
+                            </div>
+                            <div class="col">
+                                <div id="mfcc3"></div>
+                            </div>
                         </div>
                         <div class="row">
-                            <br><button class="button button5">usr4</button> <div id="mfcc4"></div><br />
+                            <div class="col">
+                                <button class="button button5">usr4</button>
+                            </div>
+                            <div class="col">
+                                <div id="mfcc4"></div>
+                            </div>
                         </div>
                     </div>
                     <hr>
