--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -61,7 +61,7 @@
                         <div class="row">
                             <div class="col">
                                 <!-- <div id="chroma"></div> -->
-                                <div id="mfcc"></div><br />
+                                <div id="mfcc"></div>
                             </div>
                         </div>
                         <div class="row">
@@ -94,7 +94,7 @@
                             </div>
                             <div class="col">
                                 <div id="mfcc3"></div>
-                            </div>
+                            </div>c
                         </div>
                         <div class="row">
                             <div class="col">
