[DBG] add css for choose

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -44,7 +44,7 @@
                         <div id="legend">
                             <div class="key-item">
                                 <div class="key-color pink"></div>
-                                <div class="key-text">Root Mean Squared (RMS)</div>
+                                <div class="key-text">RMS</div>
                             </div>
                             <div class="key-item">
                                 <div class="key-color yellow"></div>
@@ -55,21 +55,21 @@
                                 <div class="key-text">Spectral Rolloff</div>
                             </div>
                         </div>
-<!--                        <div id="mfcc"></div><br />-->
+                        <div id="mfcc"></div>
                     </div>
                     <div class="col">
                         <div class="row">
-                            <div class="col">
-                                <!-- <div id="chroma"></div> -->
-                                <div id="mfcc"></div>
-                            </div>
+<!--                            <div class="col">-->
+<!--                                &lt;!&ndash; <div id="chroma"></div> &ndash;&gt;-->
+<!--                                <div id="mfcc"></div>-->
+<!--                            </div>-->
                         </div>
                         <div class="row">
                             <div class="col">
                                 <button class="button button1">new</button>
                             </div>
                             <div class="col">
-                                <div id="mfcc0"></div>
+                                <div id="mfcc0" class="fband"></div>
                             </div>
                         </div>
                         <div class="row">
@@ -77,7 +77,7 @@
                                 <button class="button button2">usr1</button>
                             </div>
                             <div class="col">
-                                <div id="mfcc1"></div>
+                                <div id="mfcc1" class="fband"></div>
                             </div>
                         </div>
                         <div class="row">
@@ -85,7 +85,7 @@
                                 <button class="button button3">usr2</button>
                             </div>
                             <div class="col">
-                                <div id="mfcc2"></div>
+                                <div id="mfcc2" class="fband"></div>
                             </div>
                         </div>
                         <div class="row">
@@ -93,7 +93,7 @@
                                 <button class="button button4">usr3</button>
                             </div>
                             <div class="col">
-                                <div id="mfcc3"></div>
+                                <div id="mfcc3" class="fband"></div>
                             </div>c
                         </div>
                         <div class="row">
@@ -101,7 +101,7 @@
                                 <button class="button button5">usr4</button>
                             </div>
                             <div class="col">
-                                <div id="mfcc4"></div>
+                                <div id="mfcc4" class="fband"></div>
                             </div>
                         </div>
                     </div>
