[DBG] change loader

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -57,16 +57,10 @@
                         </div>
                         <div id="mfcc"></div>
                     </div>
-                    <div class="col">
-                        <div class="row">
-<!--                            <div class="col">-->
-<!--                                &lt;!&ndash; <div id="chroma"></div> &ndash;&gt;-->
-<!--                                <div id="mfcc"></div>-->
-<!--                            </div>-->
-                        </div>
+                    <div id="arms" class="col">
                         <div class="row">
                             <div class="col">
-                                <button class="button button1">new</button>
+                                <button class="button button1">No Speaker</button>
                             </div>
                             <div class="col">
                                 <div id="mfcc0" class="fband"></div>
