[DBG] try adding new buttons when clicked on new

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -60,7 +60,7 @@
                     <div id="arms" class="col">
                         <div class="row">
                             <div class="col">
-                                <button class="button button1">No Speaker</button>
+                                <button class="button button1" id="none">No Speaker</button>
                             </div>
                             <div class="col">
                                 <div id="mfcc0" class="fband"></div>
@@ -68,35 +68,35 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <button class="button button2">usr1</button>
+                                <button class="button button2" id="new">New Speaker</button>
                             </div>
                             <div class="col">
                                 <div id="mfcc1" class="fband"></div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col">
-                                <button class="button button3">usr2</button>
-                            </div>
-                            <div class="col">
-                                <div id="mfcc2" class="fband"></div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <button class="button button4">usr3</button>
-                            </div>
-                            <div class="col">
-                                <div id="mfcc3" class="fband"></div>
-                            </div>c
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <button class="button button5">usr4</button>
-                            </div>
-                            <div class="col">
-                                <div id="mfcc4" class="fband"></div>
-                            </div>
+<!--                        <div class="row">-->
+<!--                            <div class="col">-->
+<!--                                <button class="button button3">usr2</button>-->
+<!--                            </div>-->
+<!--                            <div class="col">-->
+<!--                                <div id="mfcc2" class="fband"></div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="row">-->
+<!--                            <div class="col">-->
+<!--                                <button class="button button4">usr3</button>-->
+<!--                            </div>-->
+<!--                            <div class="col">-->
+<!--                                <div id="mfcc3" class="fband"></div>-->
+<!--                            </div>c-->
+<!--                        </div>-->
+<!--                        <div class="row">-->
+<!--                            <div class="col">-->
+<!--                                <button class="button button5">usr4</button>-->
+<!--                            </div>-->
+<!--                            <div class="col">-->
+<!--                                <div id="mfcc4" class="fband"></div>-->
+<!--                            </div>-->
                         </div>
                     </div>
                     <hr>
