--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -97,9 +97,8 @@
 <!--                            <div class="col">-->
 <!--                                <div id="mfcc4" class="fband"></div>-->
 <!--                            </div>-->
-                        </div>
+<!--                        </div>-->
                     </div>
-                    <hr>
                 </div>
                 <script src="main.js"></script>
 
