[DBG] roll back onclick

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -68,7 +68,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <button class="button button1" id="new" onclick="newBtn()">New Speaker</button>
+                                <button class="button button1" id="new">New Speaker</button>
                             </div>
                             <div class="col">
                                 <div id="mfcc0" class="fband"></div>
