[FEAT] enable linucb arms

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -14,6 +14,7 @@
     <script src="https://www.baihan.nyc/js/meyda.js"></script>
     <script src="https://www.baihan.nyc/js/three.js"></script>
     <script src="https://www.baihan.nyc/js/tda.js"></script>
+    <script src="https://www.baihan.nyc/js/math.js"></script>
 
 </head>
 
@@ -58,12 +59,14 @@
                         <div id="mfcc"></div>
                     </div>
                     <div id="arms" class="col">
+                        <div class="row" id="voiceid">
+                        </div>
                         <div class="row">
                             <div class="col">
                                 <button class="button button1" id="none">No Speaker</button>
                             </div>
                             <div class="col">
-                                <div id="mfcc0" class="fband"></div>
+                                <div id="mfccnone" class="fband"></div>
                             </div>
                         </div>
                         <div class="row">
@@ -71,33 +74,9 @@
                                 <button class="button button1" id="new">New Speaker</button>
                             </div>
                             <div class="col">
-                                <div id="mfcc0" class="fband"></div>
+                                <div id="mfccnew" class="fband"></div>
                             </div>
                         </div>
-<!--                        <div class="row">-->
-<!--                            <div class="col">-->
-<!--                                <button class="button button3">usr2</button>-->
-<!--                            </div>-->
-<!--                            <div class="col">-->
-<!--                                <div id="mfcc2" class="fband"></div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="row">-->
-<!--                            <div class="col">-->
-<!--                                <button class="button button4">usr3</button>-->
-<!--                            </div>-->
-<!--                            <div class="col">-->
-<!--                                <div id="mfcc3" class="fband"></div>-->
-<!--                            </div>c-->
-<!--                        </div>-->
-<!--                        <div class="row">-->
-<!--                            <div class="col">-->
-<!--                                <button class="button button5">usr4</button>-->
-<!--                            </div>-->
-<!--                            <div class="col">-->
-<!--                                <div id="mfcc4" class="fband"></div>-->
-<!--                            </div>-->
-<!--                        </div>-->
                     </div>
                 </div>
                 <script src="main.js"></script>
