--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -59,7 +59,8 @@
                         <div id="mfcc"></div>
                     </div>
                     <div id="arms" class="col">
-                        <div class="row" id="voiceid">
+                        <div class="row">
+                            <div id="voiceid"></div>
                         </div>
                         <div class="row">
                             <div class="col">
