[DBG] change alert

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div id="arms" class="col">
                         <div class="row">
-                            <div id="voiceid"></div>
+                            <div id="voiceid">Initializing...</div>
                         </div>
                         <div class="row">
                             <div class="col">
