[FEAT] implemented linucb

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -67,7 +67,7 @@
                                 <button class="button button1" id="none">No Speaker</button>
                             </div>
                             <div class="col">
-                                <div id="mfccnone" class="fband"></div>
+                                <div id="thetanone" class="fband"></div>
                             </div>
                         </div>
                         <div class="row">
@@ -75,7 +75,7 @@
                                 <button class="button button1" id="new">New Speaker</button>
                             </div>
                             <div class="col">
-                                <div id="mfccnew" class="fband"></div>
+                                <div id="thetanew" class="fband"></div>
                             </div>
                         </div>
                     </div>
