[FEAT] linucb update

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -60,11 +60,11 @@
                     </div>
                     <div id="arms" class="col">
                         <div class="row">
-                            <div id="voiceid">Initializing...</div>
+                            <h4 id="voiceid">Initializing...</h4>
                         </div>
                         <div class="row">
                             <div class="col">
-                                <button class="button button1" id="none">No Speaker</button>
+                                <button class="button button1" id="btnnone">No Speaker</button>
                             </div>
                             <div class="col">
                                 <div id="thetanone" class="fband"></div>
@@ -72,7 +72,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <button class="button button1" id="new">New Speaker</button>
+                                <button class="button button1" id="btnnew">New Speaker</button>
                             </div>
                             <div class="col">
                                 <div id="thetanew" class="fband"></div>
