[DBG] triple equal

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div id="arms" class="col">
                         <div class="row">
-                            <h4 id="voiceid">Initializing...</h4>
+                            <h4 id="voiceid" style="text-transform:none">Initializing...</h4>
                         </div>
                         <div class="row">
                             <div class="col">
