--- a/html/header.html
+++ b/html/header.html
@@ -1,4 +1,4 @@
-<div id="loading"></div>
+<!-- <div id="loading"></div> -->
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
