--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -38,7 +38,7 @@
                 <div class="row">
                     <div id="showcase" class="col">
                         <div id="audioControl">
-                            <p>Allow microphone access or play this audio file to see a demo.</p>
+                            <p>Please allow microphone access (or play this audio file to see a demo).</p>
                             <audio id="elvisSong" controls src="HUP-Podcast-Modris-Eksteins-on-Solar-Dance.mp3"></audio>
                         </div>
                         <canvas></canvas>
