[FEAT] replace tensegrity with voiceID

--- a/html/navright.html
+++ b/html/navright.html
@@ -18,9 +18,12 @@
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/neuralMDL">neural MDL</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/viz/VoiceID">voiceID</a>
+            </li>
+<!--             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/tensegrity">tensegrity</a>
             </li>
-            <li class="nav-item">
+ -->            <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/proteindesign">protein design</a>
             </li>
             <li class="nav-item">
