--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -36,7 +36,7 @@
 
                     <br><b> Instruction: </b> Please turn on the microphone access for this demo. You may click on the right answer as a feedback to the system to improve its agent for future prediction. When a new user is detected, a new user profile will not be added until you confirmed it by clicking "New Speaker". Refreshing the page will clear all the user profiles and restart the learning from scratch. If you have any question, feel free to email <a href="mailto:doerlbh@gmail.com">doerlbh@<span style="display:none;">-ignoreme-</span>gmail.com</a> with the title starting with "[VoiceID Question]", and we will get back to you shortly. Thank you! <br>
 
-                    <br><b> Note: </b> For proper usage, please choose Google Chrome (where this demo has been tested)/<br>
+                    <br><b> Note: </b> For proper usage, please choose Google Chrome (where this demo has been tested).<br>
                 </p>
 
                 <div class="row">
