--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -25,7 +25,7 @@
      -->
     <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
-            <div class="my-auto">
+            <div class="voiceid-body">
                 <h2 class="mb-5" , style="text-transform:none">VoiceID on the fly </h2>
                 <h3 class="mb-5" , style="text-transform:none">a Real-time Register-free Online-learning Speaker Recognition System</h3>
 
