[DBG] try png logo

--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -25,7 +25,7 @@
      -->
     <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
-            <div id="voiceid-body">
+            <div id="voiceidbody">
                 <h2 class="mb-5" , style="text-transform:none">VoiceID on the fly </h2>
                 <h3 class="mb-5" , style="text-transform:none">a Real-time Register-free Online-learning Speaker Recognition System</h3>
 
@@ -36,7 +36,7 @@
 
                     <br><b> Instruction: </b> Please turn on the microphone access for this demo. You may click on the right answer as a feedback to the system to improve its agent for future prediction. When a new user is detected, a new user profile will not be added until you confirmed it by clicking "New Speaker". Refreshing the page will clear all the user profiles and restart the learning from scratch. If you have any question, feel free to email <a href="mailto:doerlbh@gmail.com">doerlbh@<span style="display:none;">-ignoreme-</span>gmail.com</a> with the title starting with "[VoiceID Question]", and we will get back to you shortly. Thank you! <br>
 
-                    <br><b> Note: </b> For proper usage, please choose Google Chrome (where this demo has been tested).<br>
+                    <br><b> Note: </b> For proper usage, please choose Google Chrome (where this demo has been tested). In early rounds, the agent tends to guess "New Speaker" a lot more often than other options because it is the only arm that receives the explicit positive feedback from the user, while the positive feedbacks for other users can only be implicitly proprogated by the self-supervision step to help with the semi-supervision.<br>
                 </p>
 
                 <div class="row">
