[DBG] add bibtex

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <div class="textcolumn">
                                 [19]&nbsp;<b class="text-primary" id="p19"> A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry &nbsp; </b>
                                 <br />
-                                <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish
+                                <b><span style="color: dimgray;">Baihan Lin</span></b>, Djallel Bouneffouf, Guillermo Cecchi, Jenna Reinen, Irina Rish
                                 <br />
                                 <br/>
                                 <p style="color:black"> AAMAS 2020 </p>
