--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -49,13 +49,30 @@
                 <h3 style="text-transform:none"> Publications </h3>
 
                 <p class="mb-5 text-primary">
-                    [1] Lin, B., Bouneffouf, D., & Cecchi, G. (2019). Split Q learning: reinforcement learning with two-stream rewards. <em> In Proceedings of the 28th International Joint Conference on Artificial Intelligence (pp. 6448-6449). AAAI Press.</em>
+                    [1] Lin, B., Bouneffouf, D., & Cecchi, G., D., Reinen, J., & Rish, I. (2019). A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry. <em> In Proceedings of the Nineteenth International Conference on Autonomous Agents and Multi-Agent Systems, AAMAS 2020. IFAAMAS Press.</em>
+                    <br> [<a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">arXiv</a>][<a class="collapsible" style="color:#268fd6">bibTex&nbsp;</a>]
+                    <div class="abstract">
+                <p>@inproceedings{lin2020astory,<br>
+                title={A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry},<br>
+                author={Lin, Baihan and Bouneffouf, Djallel and Reinen, Jenna and Rish, Irina and Cecchi, Guillermo},<br>
+                booktitle = {Proceedings of the Nineteenth International Conference on Autonomous Agents and Multi-Agent Systems, {AAMAS-20}},<br>
+                publisher = {International Foundation for Autonomous Agents and Multiagent Systems},<br>
+                pages     = {},<br>
+                year      = {2020},<br>
+                month     = {5},<br>
+                doi       = {},<br>
+                url       = {},<br>
+                }
+            </p>
+                    </div>
+                    <br>
+                    <br>[2] Lin, B., Bouneffouf, D., & Cecchi, G. (2019). Split Q learning: reinforcement learning with two-stream rewards. <em> In Proceedings of the 28th International Joint Conference on Artificial Intelligence, IJCAI 2019 (pp. 6448-6449). AAAI Press.</em>
                     <br> <b> link: </b> <a href="https://arxiv.org/abs/1906.12350" style="color:#268fd6">https://arxiv.org/abs/1906.12350</a>
                     <br>
-                    <br> [2] Lin, B., Cecchi, G., Bouneffouf, D., Reinen, J., & Rish, I. (2019). Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. <em> 2019 NeurIPS Workshop on Biological and Artificial Reinforcement Learning (BARL) </em>
+                    <br> [3] Lin, B., Cecchi, G., Bouneffouf, D., Reinen, J., & Rish, I. (2019). Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. <em> 2019 NeurIPS Workshop on Biological and Artificial Reinforcement Learning (BARL) </em>
                     <br> <b> link: </b> <a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">https://arxiv.org/abs/1906.11286</a>
                     <br>
-                    <br> [3] Lin, B. (2019). Modeling Neurological and Psychiatric Disorders with Reward Biased Reinforcement Learning Models. <em> 2019 Technology in Psychiatry Summit (TIPS) </em>
+                    <br> [4] Lin, B. (2019). Modeling Neurological and Psychiatric Disorders with Reward Biased Reinforcement Learning Models. <em> 2019 Technology in Psychiatry Summit (TIPS) </em>
                     <!-- <img src="../../img/random/sleep.jpg" alt=""> -->
                 </p>
 
