[DBG] update bkgd size

--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -51,20 +51,20 @@
                 <p class="mb-5 text-primary">
                     [1] Lin, B., Bouneffouf, D., & Cecchi, G., D., Reinen, J., & Rish, I. (2019). A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry. <em> In Proceedings of the Nineteenth International Conference on Autonomous Agents and Multi-Agent Systems, AAMAS 2020. IFAAMAS Press.</em>
                     <br> [<a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">arXiv</a>][<a class="collapsible" style="color:#268fd6">bibTex&nbsp;</a>]
-                    <div class="abstract">
-                <p>@inproceedings{lin2020astory,<br>
-                title={A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry},<br>
-                author={Lin, Baihan and Bouneffouf, Djallel and Reinen, Jenna and Rish, Irina and Cecchi, Guillermo},<br>
-                booktitle = {Proceedings of the Nineteenth International Conference on Autonomous Agents and Multi-Agent Systems, {AAMAS-20}},<br>
-                publisher = {International Foundation for Autonomous Agents and Multiagent Systems},<br>
-                pages     = {},<br>
-                year      = {2020},<br>
-                month     = {5},<br>
-                doi       = {},<br>
-                url       = {},<br>
-                }
-            </p>
-                    </div>
+<!--                    <div class="abstract">-->
+<!--                <p>@inproceedings{lin2020astory,<br>-->
+<!--                title={A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry},<br>-->
+<!--                author={Lin, Baihan and Bouneffouf, Djallel and Reinen, Jenna and Rish, Irina and Cecchi, Guillermo},<br>-->
+<!--                booktitle = {Proceedings of the Nineteenth International Conference on Autonomous Agents and Multi-Agent Systems, {AAMAS-20}},<br>-->
+<!--                publisher = {International Foundation for Autonomous Agents and Multiagent Systems},<br>-->
+<!--                pages     = {},<br>-->
+<!--                year      = {2020},<br>-->
+<!--                month     = {5},<br>-->
+<!--                doi       = {},<br>-->
+<!--                url       = {},<br>-->
+<!--                }-->
+<!--            </p>-->
+<!--                    </div>-->
                     <br>
                     <br>[2] Lin, B., Bouneffouf, D., & Cecchi, G. (2019). Split Q learning: reinforcement learning with two-stream rewards. <em> In Proceedings of the 28th International Joint Conference on Artificial Intelligence, IJCAI 2019 (pp. 6448-6449). AAAI Press.</em>
                     <br> <b> link: </b> <a href="https://arxiv.org/abs/1906.12350" style="color:#268fd6">https://arxiv.org/abs/1906.12350</a>
