--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -50,44 +50,14 @@
 
             <p class="mb-5 text-primary">
                 [1] Lin, B., Bouneffouf, D., & Cecchi, G., D., Reinen, J., & Rish, I. (2019). A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry. <em> In Proceedings of the Nineteenth International Conference on Autonomous Agents and Multi-Agent Systems, AAMAS 2020. IFAAMAS Press.</em>
-                <br> [<a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">arXiv</a>][<a class="collapsible" style="color:#268fd6">bibTex&nbsp;</a>]</p>
-            <p class="abstract">
-                @inproceedings{lin2020astory,<br>
-                title={A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry},<br>
-                author={Lin, Baihan and Bouneffouf, Djallel and Reinen, Jenna and Rish, Irina and Cecchi, Guillermo},<br>
-                booktitle = {Proceedings of the Nineteenth International Conference on Autonomous Agents and Multi-Agent Systems, {AAMAS-20}},<br>
-                publisher = {International Foundation for Autonomous Agents and Multiagent Systems},<br>
-                pages     = {},<br>
-                year      = {2020},<br>
-                month     = {5},<br>
-                doi       = {},<br>
-                url       = {},<br>
-                }
-            </p>
+                <br> [<a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2020astory.txt" style="color:#268fd6">bibTex</a>]&nbsp;
             <br>
-            <p class="mb-5 text-primary">
             <br>[2] Lin, B., Bouneffouf, D., & Cecchi, G. (2019). Split Q learning: reinforcement learning with two-stream rewards. <em> In Proceedings of the 28th International Joint Conference on Artificial Intelligence, IJCAI 2019 (pp. 6448-6449). AAAI Press.</em>
-                <br> [<a href="https://arxiv.org/abs/1906.12350" style="color:#268fd6">arXiv</a>][<a class="collapsible" style="color:#268fd6">bibTex&nbsp;</a>]</p>
-            <p class="abstract">
-                @inproceedings{lin2019split-913,<br>
-                title     = {Split {Q} Learning: Reinforcement Learning with Two-Stream Rewards},<br>
-                author    = {Lin, Baihan and Bouneffouf, Djallel and Cecchi, Guillermo},<br>
-                booktitle = {Proceedings of the Twenty-Eighth International Joint Conference on<br>
-                Artificial Intelligence, {IJCAI-19}},<br>
-                publisher = {International Joint Conferences on Artificial Intelligence Organization},<br>
-                pages     = {6448--6449},<br>
-                year      = {2019},<br>
-                month     = {7},<br>
-                doi       = {10.24963/ijcai.2019/913},<br>
-                url       = {https://doi.org/10.24963/ijcai.2019/913},<br>
-                }
-            </p>
+                <br> [<a href="https://arxiv.org/abs/1906.12350" style="color:#268fd6">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2019split.txt" style="color:#268fd6">bibTex</a>]&nbsp;
             <br>
-            <p class="mb-5 text-primary">
             <br> [3] Lin, B., Cecchi, G., Bouneffouf, D., Reinen, J., & Rish, I. (2019). Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. <em> 2019 NeurIPS Workshop on Biological and Artificial Reinforcement Learning (BARL) </em>
-            <br> [<a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">arXiv</a>]</p>
+            <br> [<a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">arXiv</a>]
             <br>
-            <p class="mb-5 text-primary">
             <br> [4] Lin, B. (2019). Modeling Neurological and Psychiatric Disorders with Reward Biased Reinforcement Learning Models. <em> 2019 Technology in Psychiatry Summit (TIPS) </em>
             </p>
 
