--- a/viz/VoiceID/index.html
+++ b/viz/VoiceID/index.html
@@ -86,6 +86,14 @@
                 </div>
                 <script src="main.js"></script>
 
+<!--                <h3 style="text-transform:none"> Reference: </h3>-->
+
+<!--                <p class="mb-5 text-primary">-->
+<!--                    [1] Lin, B., & Zhang, X. (2020). VoiceID on the fly: Real-time Register-free Online-learning Speaker Recognition. <em>under review.</em>-->
+<!--                    <br> [<a href="" style="color:#268fd6">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2020voice.txt" style="color:#268fd6">bibTex</a>]&nbsp;-->
+<!--                    <br>-->
+<!--                </p>-->
+
             </div>
         </section>
     </div>
