--- a/proj/neuralMDL/index.html
+++ b/proj/neuralMDL/index.html
@@ -47,11 +47,11 @@
                 <h3 style="text-transform:none"> Publications </h3>
 
                 <p class="mb-5 text-primary">
-                    [1] Lin, B. (2019). Neural Networks as Model Selection with Incremental MDL Normalization. <em> Human Brain and Artificial Intelligence, (Vol. 1072, pp. 195-209). Springer Nature.</em> 
-                    <br> <b> link: </b> <a href="https://link.springer.com/chapter/10.1007/978-981-15-1398-5_14" style="color:#268fd6">https://link.springer.com/chapter/10.1007/978-981-15-1398-5_14</a>
+                    [1] Lin, B. (2019). Unsupervised Attention Mechanism across Neural Network Layers. <em> arXiv preprint arXiv:1902.10658. </em>
+                    <br> [<a href="https://arxiv.org/abs/1902.10658" style="color:#268fd6">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2019unsupervised.txt" style="color:#268fd6">bibTex</a>]&nbsp;
                     <br>
-                    <br> [2] Lin, B. (2019). Unsupervised Attention Mechanism across Neural Network Layers. <em> arXiv preprint arXiv:1902.10658. </em>
-                    <br> <b> link: </b> <a href="https://arxiv.org/abs/1902.10658" style="color:#268fd6">https://arxiv.org/abs/1902.10658</a>
+                    [2] Lin, B. (2019). Neural Networks as Model Selection with Incremental MDL Normalization. <em> Human Brain and Artificial Intelligence, (Vol. 1072, pp. 195-209). Springer Nature.</em>
+                    <br> [<a href="https://link.springer.com/chapter/10.1007/978-981-15-1398-5_14" style="color:#268fd6">link</a>][<a href="https://www.baihan.nyc/bibTex/lin2019neural.txt" style="color:#268fd6">bibTex</a>]&nbsp;
                     <br>
                     <!-- <img src="../../img/random/sleep.jpg" alt=""> -->
                 </p>
@@ -69,7 +69,15 @@
                 <h3 style="text-transform:none"> Results </h3>
 
                 <p class="mb-5 text-primary">
-                    We tested it in several scenarios. MNIST, the classical computer vision problem, for instance, offers a lens for a simple two-layer neural network with or without a normalization factor (computed as the incremental minimum description length that I proposed in the paper). Here shown is a variant of the original problem, where I artificially installed an imbalanced distribution onto the training set such that certain class is highly downsampled. Since now we can approximate it directly, we can visualize them across the training time:
+                    We tested it in several scenarios, where UAM offers a lens for a simple two-layer neural network with or without a normalization factor (computed as the incremental minimum description length that I proposed in the paper).
+                    <br>
+                    <img src="./img/nn.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
+                    <br>
+                    Also in recurrent neural networks:
+                    <br>
+                    <img src="./img/rnn.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
+                    <br>
+                    MNIST, the classical computer vision problem, for instance, can be changed to impose some regularity priors for testing. Here shown is a variant of the original problem, where I artificially installed an imbalanced distribution onto the training set such that certain class is highly downsampled. Since now we can approximate it directly, we can visualize them across the training time:
                     <br>
                     <img src="./img/mnist.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
                     <br>
@@ -90,7 +98,7 @@
                 <h3 style="text-transform:none"> Ongoing work </h3>
 
                 <p class="mb-5 text-primary">
-                    To better understand the perspective I proposed, I am comparing my method with other information theoretical methods such as mutual information. Stay tuned~
+                    To better understand the perspective I proposed, I am comparing my method with other information theoretical methods such as mutual information and VC dimensions. Stay tuned~
                     <br>
                     <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
                 </p>
